<?xml version="1.0" encoding="utf-8"?>
<resources>

   <string name="app_name">Books Bag</string>
   <string name="action_settings">Settings</string>
   <string name="action_exp_db">Export data</string>
   <string name="action_imp_db">Import data</string>
   <string name="action_exp_all">Expand all</string>
   <string name="action_clp_all">Collapse all</string>
   <string name="action_delete">Delete</string>
   <string name="action_duplicate">Copy</string>
   <string name="action_sort">Sort</string>
   <string name="prf_xpr_db_scs">Data successfully exported</string>
   <string name="prf_imp_db_scs">Data successfully imported</string>
   <string name="title_book_detail">Book details</string>
   <string name="title_settings">Settings</string>
   <string name="et_title">Title</string>
   <!-- <string name="lbl_authors">Authors</string> -->
   <string name="lbl_author">Author</string>
   <string name="fld_title">Title</string>
   <string name="fld_author">Author|Authors</string>
   <string name="fld_descrition">Description</string>
   <string name="fld_serie">Serie</string>
   <string name="fld_volume">Volume</string>
   <string name="fld_genre">Genre|Genres</string>
   <string name="fld_language">Language</string>
   <string name="fld_pages">Pages</string>
   <string name="fld_publisher">Publisher</string>
   <string name="fld_publication_date">Year of publication</string>
   <string name="fld_publication_location">Place of publication</string>
   <string name="fld_edition">Edition</string>
   <string name="fld_price">Price</string>
   <string name="fld_status">Status</string>
   <string name="fld_loaned_to">Lent to</string>
   <string name="fld_value">Value</string>
   <string name="fld_read">Read</string>
   <string name="fld_read_date">Date of reading</string>
   <string name="fld_rating">Rating</string>
   <string name="fld_format">Format</string>
   <string name="fld_location">Location</string>
   <string name="fld_condition">Condition</string>
   <string name="fld_due_date">Due date</string>
   <string name="fld_isbn">ISBN</string>
   <string name="fld_web">Web address</string>
   <string name="done">DONE</string>
   <string name="cancel">Discard</string>
   <string name="add_new">Add new</string>
   <string name="amn_vl">%1$01d%2$c%3$02d</string>
   <string name="amn_vl_crn">%1$01d%2$c%3$02d %4$s</string>
   <string name="btn_add_field">Add another field</string>
   <string name="err_db">Error inserting in %1$s TypeID:%2$d Value:%3$s</string>
   <string name="srt_title">Sort by title</string>
   <string name="srt_author">Sort by author</string>
   <string name="srt_wanted_pbl_aut">Wanted, sorted by publisher and author</string>
   <string name="srt_wanted_pbl_ttl">Wanted, sorted by publisher and title</string>
   <string name="srt_read_aut">Read, sorted by author</string>
   <string name="srt_read_ttl">Read, sorted by title</string>
   <string name="srt_not_read_aut">Unread, sorted by author</string>
   <string name="srt_not_read_ttl">Unread, sorted by title</string>
   <string name="srt_pbl_aut">Publishers, sorted by author</string>
   <string name="srt_pbl_ttl">Publishers, sorted by title</string>
   <string name="srt_lnd_ttl">Lent, sorted by title</string>
   <string name="srt_lnd_brw">Lent, sorted by renter</string>
   <string name="book_0">No books</string>
   <string name="book">1 book</string>
   <string name="books">%1$d books</string>
   <string name="pref_title_expand_all">Expand all</string>
   <string name="pref_summary_expand_all">Expand all on data load</string>
   <string name="pref_title_export_folder">Export folder</string>
   <string name="pref_summary_export_folder">Default folder for data export</string>
   <string name="save">Save</string>
   <string name="load">Load</string>
   <string name="lbl_ent_fl_nm">File name:</string>
   <string name="btn_crt_nw_fld">Create new folder</string>
   <string name="btn_new_fld">New folder</string>
   <string name="btn_fl_tp">File type</string>
   <!-- <string name="msg_new_fld">Create new folder</string> -->
   <string name="create">Create</string>
   <string name="msg_fld_crt_ok">Folder created successfully</string>
   <string name="msg_fld_crt_err">Unavle to create new folder</string>
   <string name="msg_cnt_sv_fl">Unable to save the file</string>
   <string name="msg_msn_fl">No such file</string>
   <string name="msg_acc_dnd">Access denied</string>
   <string name="information">Information</string>
   <string name="msg_fl_nm_frs">Please enter the file name first</string>
   <string name="fmt_fl_nm">%1$s_%2$d%3$02d%4$02d%5$02d%6$02d.%7$s</string>
   <string name="lng_bg">Bulgarian</string>
   <string name="lng_en">English</string>
   <string name="lng_fr">French</string>
   <string name="lng_de">German</string>
   <string name="lng_it">Italian</string>
   <string name="lng_ru">Russian</string>
   <string name="lng_sp">Spanish</string>
   <string name="sts_avb">Available</string>
   <string name="sts_wnt">Wanted</string>
   <string name="sts_ln">Lent</string>
   <string name="fmt_hrd_cpy">Hard copy</string>
   <string name="fmt_fb2">fb2</string>
   <string name="fmt_epub">epub</string>
   <string name="cnd_nw">As new</string>
   <string name="cnd_fn">Fine</string>
   <string name="cnd_vr_gd">Very good</string>
   <string name="cnd_gd">Good</string>
   <string name="cnd_fr">Fair</string>
   <string name="cnd_pr">Poor</string>
   <string name="cnd_bnd_cp">Binding copy</string>
   <string name="cnd_rd_cp">Reading copy</string>
   <string name="crn_bgn">BGN</string>
   <string name="crn_eur">EUR</string>
   <string name="crn_gbp">GBP</string>
   <string name="crn_rbl">RBL</string>
   <string name="crn_usd">USD</string>
   <string name="gnr_art">Art</string>
   <string name="gnr_bio">Biography</string>
   <string name="gnr_bsn">Business</string>
   <string name="gnr_chk_lt">Chick Lit</string>
   <string name="gnr_chl">Children\'s</string>
   <string name="gnr_cls">Classics</string>
   <string name="gnr_cmc">Comics</string>
   <string name="gnr_cnt">Contemporary</string>
   <string name="gnr_ckb">Cookbooks</string>
   <string name="gnr_crm">Crime</string>
   <string name="gnr_fr_tl">Fairy tale</string>
   <string name="gnr_fnt">Fantasy</string>
   <string name="gnr_fct">Fiction</string>
   <string name="gnr_flk">Folklore</string>
   <string name="gnr_hst_fct">Historical fiction</string>
   <string name="gnr_hst">History</string>
   <string name="gnr_hrr">Horror</string>
   <string name="gnr_hmr">Humor</string>
   <string name="gnr_jrn">Journalism</string>
   <string name="gnr_lgn">Legend</string>
   <string name="gnr_mgc">Magical realism</string>
   <string name="gnr_mng">Manga</string>
   <string name="gnr_mmr">Memoir</string>
   <string name="gnr_mst">Mystery</string>
   <string name="gnr_mth">Mythology</string>
   <string name="gnr_prn">Paranormal</string>
   <string name="gnr_phl">Philosophy</string>
   <string name="gnr_pct_bk">Picture book</string>
   <string name="gnr_ptr">Poetry</string>
   <string name="gnr_psc">Psychology</string>
   <string name="gnr_rlc_fct">Realistic fiction</string>
   <string name="gnr_rfr_bk">Reference book</string>
   <string name="gnr_rlg">Religion</string>
   <string name="gnr_rmn">Romance</string>
   <string name="gnr_scn">Science</string>
   <string name="gnr_scn_fct">Science Fiction</string>
   <string name="gnr_slf_hlp">Self Help</string>
   <string name="gnr_spr">Spirituality</string>
   <string name="gnr_spt">Sports</string>
   <string name="gnr_ssp">Suspense/Thriller</string>
   <string name="gnr_trv">Travel</string>
   <string name="gnr_wst">Western</string>
   <string name="gnr_yng_adt">Young Adult</string>
   <string name="err_emp_ttl">The title is required</string>
   <string name="smp_fl_nm">file name</string>

</resources>