<android.support.v7.preference.PreferenceScreen 
    xmlns:android="http://schemas.android.com/apk/res/android">
        <android.support.v7.preference.CheckBoxPreference
            android:key="pref_expand_all"
            android:summary="@string/pref_summary_expand_all"
            android:title="@string/pref_title_expand_all"
            android:defaultValue="false"
            />
        <android.support.v7.preference.EditTextPreference
            android:key="pref_export_folder"
            android:summary="@string/pref_summary_export_folder"
            android:title="@string/pref_title_export_folder" 
            android:defaultValue="@string/app_name"
            android:dialogLayout="@layout/preference_dialog_edittext_fix"/>
        
<!--    <PreferenceCategory -->
<!--         android:title="@string/pref_title" -->
<!--         android:key="pref_key_storage_settings"> -->
<!--     </PreferenceCategory> -->
</android.support.v7.preference.PreferenceScreen>