<menu xmlns:android="http://schemas.android.com/apk/res/android"
   xmlns:app="http://schemas.android.com/apk/res-auto"
   xmlns:tools="http://schemas.android.com/tools"
   tools:context="com.discworld.myapplication.MainActivity" >

   <item
      android:id="@+id/action_settings"
      android:orderInCategory="1"
      android:title="@string/action_settings"
      app:showAsAction="never"/>
   <item
      android:id="@+id/action_exp_db"
      android:orderInCategory="2"
      android:title="@string/action_exp_db"
      app:showAsAction="never"/>
   <item
      android:id="@+id/action_imp_db"
      android:orderInCategory="3"
      android:title="@string/action_imp_db"
      app:showAsAction="never"/>
   <item
      android:id="@+id/action_search"
      android:icon="@drawable/ic_search"
      android:orderInCategory="4"
      android:title="@android:string/search_go"
      app:actionViewClass="android.support.v7.widget.SearchView"
      app:showAsAction="always|collapseActionView"/>
   <item
      android:id="@+id/action_sort"
      android:icon="@drawable/ic_sort"
      android:orderInCategory="5"
      android:title="@string/action_sort"
      app:showAsAction="always|collapseActionView"/>

</menu>